# first_bevy_game

./: BACKGROUND_DEBUG_PROMPT.md  Cargo.toml
boss_patterns/: README.md  stage_1_boss.json  stage_2_boss.json
src/: config.rs  main.rs
src/components/: boss.rs  mod.rs  player.rs
src/plugins/: hello_plugins.rs  mod.rs  player_plugin.rs
src/stages/: game_menu.rs  mod.rs
src/systems/: boss.rs  boundaries.rs  config.rs  mod.rs  people.rs  player.rs
